# glibc

./: .b4-config  .clang-format  .gitattributes  .gitignore  ADVISORIES  BUGS  CONTRIBUTED-BY  COPYING.LIB  ChangeLog  ChangeLog.15  ChangeLog.16  ChangeLog.17  ChangeLog.SPARC  ChangeLog.bz14955  ChangeLog.ctor  ChangeLog.hjl  ChangeLog.implies  ChangeLog.pr14562  ChangeLog.pr14654  ChangeLog.pr14664  ChangeLog.pr14941  ChangeLog.size  FAQ  FAQ.in  INSTALL  LICENSES  Make-dist  MakeTAGS  Makeconfig  Makefile  Makefile.help  Makefile.in  Makerules  NEWS  NOTES  PROJECTS  README  README.google  README.grte  README.template  (+35 more)
posix/glob/: Makefile.in  configure.in
sysdeps/aarch64/: Makefile  __alloc_gcs.c  __arm_za_disable.S  __longjmp.S  __mtag_address_get_tag.S  __mtag_memset_tag.S  __mtag_new_tag.S  __mtag_tag_region.S  __mtag_tag_zero_region.S  aarch64-gcs.h  atomic-machine.h  chacha20-aarch64.S  chacha20_arch.h  configure  configure.ac  cpu-features.h  crti.S  crtn.S  dl-audit-check.h  dl-bti.c  dl-diagnostics-cpu.c  dl-dtprocnum.h  dl-gcs.c  dl-irel.h  dl-link.sym  dl-lookupcfg.h  dl-machine.h  dl-prop.h  dl-start.S  dl-symaddr.c  dl-sysdep.h  dl-tls.h  dl-tlsdesc.S  dl-tlsdesc.h  dl-trampoline.S  dl-tunables.list  e_sqrtl.c  elf-initfini.h  hp-timing.h  jmpbuf-offsets.h  (+97 more)
sysdeps/arc/: Implies  Makefile  Versions  __longjmp.S  atomic-machine.h  configure  configure.ac  dl-machine.h  dl-runtime.c  dl-runtime.h  dl-sysdep.h  dl-tls.h  dl-trampoline.S  fpu_control.h  gccframe.h  get-rounding-mode.h  gmp-mparam.h  jmpbuf-offsets.h  jmpbuf-unwind.h  ldsodefs.h  libc-tls.c  machine-gmon.h  math-tests-trap.h  memusage.h  preconfigure  setjmp.S  sfp-machine.h  sotruss-lib.c  stackinfo.h  start.S  sysdep.h  tls-macros.h  tst-audit.h  utmp-size.h
sysdeps/csky/: Implies  Makefile  atomic-machine.h  configure  configure.ac  dl-machine.h  dl-procinfo.c  dl-procinfo.h  dl-sysdep.h  dl-tls.h  fpu_control.h  gccframe.h  jmpbuf-unwind.h  ldsodefs.h  libc-tls.c  machine-gmon.h  memusage.h  preconfigure  preconfigure.ac  sotruss-lib.c  stackinfo.h  sysdep.h  thread_pointer.h  tst-audit.h
sysdeps/ia64/: _mcount.S  atomic-machine.h  bzero.S  bzero.c  configure  configure.ac  crti.S  crtn.S  dl-dtprocnum.h  dl-fptr.h  dl-lookupcfg.h  dl-machine.h  dl-sysdep.h  dl-tls.h  dl-trampoline.S  elf-initfini.h  gccframe.h  hp-timing.h  htonl.S  htons.S  ieee754.h  jmpbuf-unwind.h  ldsodefs.h  libc-symver.h  libc-tls.c  machine-gmon.h  math-tests-snan.h  memccpy.S  memchr.S  memcmp.S  memcpy.S  memmove.S  memset.S  memusage.h  sched_cpucount.c  softpipe.h  sotruss-lib.c  stackinfo.h  start.S  strchr.S  (+9 more)
sysdeps/loongarch/: Makefile  Versions  __longjmp.S  abort-instr.h  atomic-machine.h  bsd-_setjmp.c  bsd-setjmp.c  configure  configure.ac  cpu-tunables.c  dl-audit-check.h  dl-get-cpu-features.c  dl-irel.h  dl-link.sym  dl-machine.h  dl-tls.h  dl-tlsdesc-dynamic.h  dl-tlsdesc.S  dl-tlsdesc.h  dl-trampoline.S  dl-trampoline.h  dl-tunables.list  e_sqrtl.c  fenv_private.h  fpu_control.h  hp-timing.h  jmpbuf-offsets.h  jmpbuf-unwind.h  ldsodefs.h  libc-tls.c  linkmap.h  machine-gmon.h  math-use-builtins-ffs.h  math_private.h  preconfigure  preconfigure.ac  setjmp.S  sfp-machine.h  sotruss-lib.c  stackinfo.h  (+8 more)
sysdeps/mach/: Makefile  _strerror.c  adjtime.c  clock_gettime.c  clock_nanosleep.c  configure  configure.ac  configure.in  getloadavg.c  getpagesize.c  getsysstats.c  gettimeofday.c  libc-lock.h  mach_rpc.h  mprotect.c  msync.c  munmap.c  nanosleep.c  pagecopy.h  readonly-area-fallback.c  readonly-area.c  sched_yield.c  sleep.c  start.c  strerror_l.c  sysdep.h  thread_state.h  usleep.c  xpg-strerror.c
sysdeps/microblaze/: __longjmp.S  _mcount.S  asm-syntax.h  atomic-machine.h  backtrace.c  backtrace_linux.c  bsd-_setjmp.S  bsd-setjmp.S  configure  configure.ac  crti.S  crtn.S  dl-machine.h  dl-tls.h  dl-trampoline.S  elf-initfini.h  gccframe.h  jmpbuf-unwind.h  ldsodefs.h  libc-tls.c  libm-test-ulps  machine-gmon.h  memusage.h  preconfigure  setjmp.S  sotruss-lib.c  stackinfo.h  start.S  sysdep.h  thread_pointer.h  tls-macros.h  tst-audit.h  tst-file-align.h  utmp-size.h
sysdeps/riscv/: Makefile  __longjmp.S  atomic-machine.h  configure  configure.ac  dl-dtprocnum.h  dl-irel.h  dl-link.sym  dl-machine.h  dl-relocate-ld.h  dl-tls.h  dl-trampoline.S  e_sqrtl.c  fpu_control.h  gccframe.h  jmpbuf-offsets.h  jmpbuf-unwind.h  ldsodefs.h  libc-tls.c  machine-gmon.h  math-tests-snan-payload.h  math-tests-trap.h  math-use-builtins-ffs.h  memcopy.h  memcpy.c  memcpy_noalignment.S  memusage.h  preconfigure  preconfigure.ac  riscv-ifunc.h  setjmp.S  sfp-machine.h  sotruss-lib.c  stackinfo.h  start.S  string-fza.h  string-fzi.h  string-misc.h  thread_pointer.h  tls-macros.h  (+1 more)
sysdeps/s390/: Implies  Makefile  asm-syntax.h  atomic-machine.h  bzero.c  configure  configure.ac  cpu-features.c  cpu-features.h  dl-diagnostics-cpu.c  dl-irel.h  dl-procinfo-s390.c  dl-procinfo.c  dl-procinfo.h  dl-tls.h  dl-tunables.list  elf-initfini.h  ffs.c  fix-fp-int-convert-overflow.h  gccframe.h  gconv-modules  gconv-modules-s390.conf  gmp-mparam.h  hp-timing.h  ifunc-memccpy.h  ifunc-memchr.h  ifunc-memcmp.h  ifunc-memcpy.h  ifunc-memmem.h  ifunc-memrchr.h  ifunc-memset.h  ifunc-rawmemchr.h  ifunc-stpcpy.h  ifunc-stpncpy.h  ifunc-strcat.h  ifunc-strchr.h  ifunc-strchrnul.h  ifunc-strcmp.h  ifunc-strcpy.h  ifunc-strcspn.h  (+187 more)
sysdeps/unix/: Dist  Implies  Makefile  _exit.S  acct.S  alarm.c  chdir.S  chmod.S  chown.S  chroot.S  clock_gettime.c  clock_nanosleep.c  clock_settime.c  close.S  closedir.c  configure.in  dirstream.h  dup.S  errnos-tmpl.c  errnos.awk  execve.S  fcntl.S  fork.S  fstat.S  fsync.S  get_child_max.c  getdents.c  getegid.S  geteuid.S  getgid.S  getlogin.c  getlogin_r.c  getpagesize.c  getpid.S  getppid.S  getuid.S  grantpt.c  ifreq.c  ioctl.S  ioctls-tmpl.c  (+40 more)
sysdeps/x86/: Makefile  Versions  __longjmp_cancel.S  abi-note.c  atomic-machine.h  cacheinfo.c  cacheinfo.h  cet-control.h  cet-tunables.h  check-cet.awk  configure  configure.ac  cpu-features-offsets.sym  cpu-features.c  cpu-features.h  cpu-tunables.c  (+105 more)
(+20653 files in other folders)
