dnl Process this file with autoconf to produce a configure script.
AC_INIT(fnmatch.c)		dnl A distinctive file to look for in srcdir.
AC_PROG_RANLIB
AC_PROG_CPP			dnl Later checks need this.
AC_AIX
AC_ISC_POSIX
AC_MINIX
AC_STDC_HEADERS
AC_HAVE_HEADERS(memory.h unistd.h string.h)
AC_DIR_HEADER
AC_ALLOCA
AC_STRCOLL
AC_DYNIX_SEQ
AC_XENIX_DIR
AC_OUTPUT(Makefile)
